# fastapi-lab

./: .coveragerc  .gitignore  README.md  api_models.py  artist_db.py  artist_router.py  create_local_db.sh  db.py  db_models.py  main.py  pyproject.toml  pytest.ini  recreate_db.py  requirements.txt  song_router.py  songs_db.py
src/: main.py
src/lab/: __main__.py
src/lab/cli/: db_cli.py
src/lab/controller/: __init__.py  artist.py  artist_controller.py  song.py  song_controller.py
src/lab/domain/: models_domain.py
src/lab/domain/api_models/: __init__.py  artist.py  song.py
src/lab/domain/models/: __init__.py  artist.py  song.py
src/lab/repository/: __init__.py  artist.py  artist_repository.py  db.py  external_api.py  models_repository.py  song.py  song_repository.py
src/lab/repository/models/: __init__.py  base.py
src/lab/use_cases/: __init__.py
src/lab/use_cases/artist/: create_artist.py  list_artists.py
src/lab/use_cases/songs/: create_song.py  list_songs.py
tests/: test_all.py  test_artist.py
tests/use_cases/: test_create_song.py
