[tool.poetry]
name = "fastapi-lab"
version = "0.1.0"
description = ""
authors = ["Vítor Alves <alves.vitor@bcg.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.2"
uvicorn = "0.27.0.post1"
annotated-types = "0.6.0"
anyio = "4.2.0"
click = "8.1.7"
exceptiongroup = "1.2.0"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.6"
psycopg2 = "2.9.9"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
sniffio = "1.3.0"
sqlalchemy = "2.0.25"
starlette = "0.36.3"
typing-extensions = "4.9.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
