[tool.poetry]
name = "fastapi-lab"
version = "0.1.0"
description = ""
authors = ["Vítor Alves <alves.vitor@bcg.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
fastapi = "^0.115.6"
psycopg2 = "^2.9.10"
black = "^24.10.0"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
